--- a/2d-game-tutorial/.godot/editor/editor_layout.cfg
+++ b/2d-game-tutorial/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
-dock_hsplit_3=-540
+dock_hsplit_2=417
+dock_hsplit_3=-413
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -20,7 +20,7 @@ open_scenes=["res://Player.tscn"]
 
 [ScriptEditor]
 
-open_scripts=[]
+open_scripts=["res://Player.gd"]
 open_help=[]
 script_split_offset=140
 list_split_offset=0
