--- a/2d-game-tutorial/.godot/editor/editor_layout.cfg
+++ b/2d-game-tutorial/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Player.tscn"]
+open_scenes=["res://Player.tscn", "res://Mob.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Player.gd"]
+open_scripts=["res://Mob.gd", "res://Player.gd"]
 open_help=[]
 script_split_offset=140
 list_split_offset=0
