--- a/2d-game-tutorial/.godot/editor/script_editor_cache.cfg
+++ b/2d-game-tutorial/.godot/editor/script_editor_cache.cfg
@@ -6,8 +6,22 @@ state={
 "column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 40,
-"scroll_position": 16.0,
+"row": 27,
+"scroll_position": 9.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Mob.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
