--- a/2d-game-tutorial/.godot/editor/editor_layout.cfg
+++ b/2d-game-tutorial/.godot/editor/editor_layout.cfg
@@ -16,11 +16,21 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Player.tscn", "res://Mob.tscn"]
+open_scenes=["res://Player.tscn", "res://Mob.tscn", "res://main.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Mob.gd", "res://Player.gd"]
+open_scripts=["res://main.gd", "res://Mob.gd", "res://Player.gd"]
 open_help=[]
 script_split_offset=140
 list_split_offset=0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
